--- a/web/src/index.marko
+++ b/web/src/index.marko
@@ -3,9 +3,9 @@
   <head>
     <script src=`http${input.secure ? 's' : '' }://localhost:${input.port}/scripts.js`></script>
     <!-- blocking css that blocks rendering for 3 seconds because of fetching delay -->
-    <for|i| from=0 to=18>
+    <!-- <for|i| from=0 to=18>
         <link rel="stylesheet" href=`http${input.secure ? 's' : '' }://localhost:${input.port}/styles?q=qa${i}z` />
-    </for>
+    </for> -->
     <title>training</title>
     <script>
       function myFunction() {
@@ -17,5 +17,20 @@
   <body>
     <h1 id="title" onclick="myFunction()">My First Heading</h1>
     <p>My first paragraph.</p>
+    <a href="seasoned-community://jobs">Jobs deep link</a><br/>
+    <a href="seasoned-community://gigs">Gigs deep link</a><br/>
+    <a href="seasoned-community://work">Work deep link</a><br/>
+    <a href="seasoned-community://work/my-work">My Work link</a><br/><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=bacbda7b-831a-4ccf-9a8f-fc7113939c65">Scheduled interview</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=1b8c62e5-f963-4933-a2e1-f15c3a09e0e4">Scheduled passed</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=85a7047c-cd31-41bb-8e66-bae36a608125">Canceled by Candidate</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=a2ca4c97-1dde-4d23-b148-b7d4656f277e">Reschedule</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=da3de684-8f6d-449a-a69b-066af2bb1b5e">Request an Interview Time</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=90b322b8-2b51-4b15-b554-e456ab4d4a26">REQUESTED_BY_ADMIN</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=bedc5189-5f67-479e-89dd-643e84a2829e">REQUESTED_BY_CANDIDATE</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=bedc5189-5f67-479e-89dd-643e84a2829e">REQUESTED_BY_CANDIDATE avail</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=4e718585-66f6-43a9-9359-a0dcac96ba89">REQUESTED_BY_CANDIDATE no avail</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=21431f6d-dc87-4cb6-8c98-a5f7d3755dfd">JUST A JOB</a><br/>
+    <a href="seasoned-community://scheduleinterview?jobGuid=bedc5189-5f67-479e-89dd-643e84a2829e">LAST CASE</a><br/>
   </body>
 </html>
